AB#324388:Fixed Title & CTA Overlapping

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
@@ -196,6 +196,7 @@
       @include medium {
         margin-bottom: 4rem;
         padding: 0 4rem;
+        font-size: 4.6rem;
       }
 
       @include large {
